# adaptive-contact-dynamics

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
colab/: run_on_colab.ipynb
configs/: drift_schedules.yaml  e1_planar_arm.yaml  e2_reacher.yaml  e3_push.yaml  e4_cube.yaml
docs/paper/: whitepaper.html
experiments/: build_paper.py  make_clips.py  make_clips_ogbench.py  make_figures.py  make_summary.py  run_all.py  run_certificate.py  run_e4_ogbench.py  run_env.py
paper/: whitepaper.md
results/: master_table.json  master_table.md
results/e1_planar_arm/: certificate.json  gain_sweep.json
results/e4_cube/: gain_sweep.json
src/: utils.py
src/adaptive/: certificate.py  lyapunov_update.py  mrac.py  stable_nn.py  unconstrained_nn.py
src/controllers/: pd_computed_torque.py
src/envs/: cube_drift.py  drift.py  ogbench_cube.py  planar_arm.py  push_drift.py  reacher_drift.py
src/metrics/: logging.py  recovery.py  stability.py
src/viz/: certificate_plot.py  diagrams.py  plots.py  render.py
website/: index.html
website/paper/: whitepaper.html
