[project]
name = "adaptive-contact-dynamics"
version = "0.1.0"
description = "Stability-guaranteed neural adaptation for robot manipulation under mid-task dynamics drift"
authors = [{ name = "Sehaj Singh", email = "sehajr-singhs@users.noreply.github.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.2",
    "matplotlib>=3.8",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "pyyaml>=6.0",
    "mujoco>=3.1",
    "gymnasium[mujoco]>=1.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
# OGBench / dm_control are only needed for the (optional) native OGBench cube task.
# They do not build on Python 3.14 (labmaze has no wheel), so they are kept optional
# and the repo ships a self-contained MuJoCo cube task instead. See paper limitations.
ogbench = ["ogbench>=1.2", "dm_control>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "experiments*"]
